# Engine

./: CMakeLists.txt  build.ps1
Host/: CMakeLists.txt  MpqStore.cpp  MpqStore.hpp  main.cpp
src/: Wraith.cpp
src/Engine/: Offsets.hpp
src/Features/DB2/: DB2.cpp  DB2.hpp  DB2File.cpp  DB2File.hpp  DB2FileClient.cpp  DB2Mgr.cpp  DB2Mgr.hpp  SFile.cpp  SFile.hpp
src/Features/DB2/Definitions/: CharSections.hpp  ModelFilePath.hpp  TextureFilePath.hpp
src/Features/Ipc/: Protocol.hpp  ShmClient.cpp  ShmClient.hpp
src/Features/Storage/: StorageHook.cpp  StorageHook.hpp
src/core/: Main.cpp
src/events/: Event.hpp
src/game/sound/: Sound.hpp
src/game/wmo/: Wmo.hpp
src/host/: Host.cpp  Host.hpp  main.cpp
src/host/db2/: Db2Store.cpp  Db2Store.hpp
src/host/ipc/: Protocol.hpp  ShmServer.cpp  ShmServer.hpp
src/host/mpq/: MpqStore.cpp  MpqStore.hpp
src/offsets/engine/: Gx.hpp  Shader.hpp  Sound.hpp
src/offsets/game/: ADT.hpp  WMO.hpp  World.hpp
src/runtime/: GameHooks.cpp
src/runtime/adt/: Adt.cpp  Adt.hpp
src/runtime/storage/: ShmClient.cpp  ShmClient.hpp  StorageHook.cpp  StorageHook.hpp
